@@ -9,10 +9,15 @@
 #pragma std_c99
 #endif
 
-#if defined (__SDCC_stm8) || defined (__SDCC_z80)
+#if defined (__SDCC_stm8) || defined (__SDCC_z80) || defined (__SDCC_z180) || defined (__SDCC_r2k)
 
 #define TEST_VAL 0x1234
+
+#ifdef __SDCC_stm8 // data memory in lower half of 16-bit address space
 #define loc ((volatile uint16_t *) 0x7fd)
+#else // data memory in upper half of 16-bit address space
+#define loc ((volatile uint16_t *) 0x87fd)
+#endif
 
 volatile uint16_t *p = loc;
 
@@ -30,7 +35,7 @@ void foo2 (void)
 
 void testBug (void)
 {
-#if defined (__SDCC_stm8) || defined (__SDCC_z80)
+#if defined (__SDCC_stm8) || defined (__SDCC_z80) || defined (__SDCC_z180) || defined (__SDCC_r2k)
   volatile uint16_t *q = loc;
 
   foo1 ();
